Use more permsize when running ooxml-lite as it seems to reach the default limit now
git-svn-id: https://svn.apache.org/repos/asf/poi/trunk@1696359 13f79535-47bb-0310-9956-ffa450edef68